--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,22 +13,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:outlineSpotShadowColor="@color/white" >
+        android:layout_marginStart="15dp"
+        app:cardCornerRadius="20dp"
+        android:elevation="4dp"
+        android:translationZ="4dp">
 
         <LinearLayout
             android:id="@+id/clientButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/menu_bottons_bg_selector"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
             android:paddingStart="10dp"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center"
-            android:orientation="vertical"
-            android:elevation="4dp"
-            android:translationZ="4dp">
+            android:orientation="vertical" >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -49,25 +47,23 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:outlineSpotShadowColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="15dp"
+        app:cardCornerRadius="20dp"
+        android:elevation="4dp"
+        android:translationZ="4dp">
 
         <LinearLayout
             android:id="@+id/serverButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/menu_bottons_bg_selector"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
             android:paddingEnd="10dp"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center"
-            android:orientation="vertical"
-            android:elevation="4dp"
-            android:translationZ="4dp">
+            android:orientation="vertical" >
 
             <TextView
                 android:layout_width="wrap_content"
