--- a/app/src/main/res/menu/chat_fragment_menu.xml
+++ b/app/src/main/res/menu/chat_fragment_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/ticTacToe"
-        android:icon="@drawable/ic_text_message"
-        android:title="@string/settings"
+        android:id="@+id/action_done"
+        android:icon="@drawable/ic_tictactoe"
+        android:title="@string/tic_tac_toe"
         app:showAsAction="ifRoom"/>
-
 </menu>
