--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -2,11 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tictactoeSheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".tictactoe.activities.TableFragment"
+    app:behavior_hideable="true"
+    app:behavior_peekHeight="80dp"
+
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     >
 
     <TextView
