--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -10,6 +10,7 @@
     tools:context=".tictactoe.activities.TableFragment"
     app:behavior_hideable="true"
     app:behavior_peekHeight="80dp"
+    android:background="@color/soft_blue_bg"
 
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     >
