--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.alexparra.chatapp.fragments.HomeFragment"
-        android:label="fragment_home"
+        android:label="Home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_clientConnectFragment"
@@ -22,7 +22,7 @@
     <fragment
         android:id="@+id/clientConnectFragment"
         android:name="com.alexparra.chatapp.fragments.ClientConnectFragment"
-        android:label="fragment_client_connect"
+        android:label="Chat Connect"
         tools:layout="@layout/fragment_client_connect" >
         <action
             android:id="@+id/action_clientConnectFragment_to_chatFragment"
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/serverConnectFragment"
         android:name="com.alexparra.chatapp.fragments.ServerConnectFragment"
-        android:label="fragment_server_connect"
+        android:label="Chat Host"
         tools:layout="@layout/fragment_server_connect" >
         <action
             android:id="@+id/action_serverConnectFragment_to_chatFragment"
@@ -42,7 +42,7 @@
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.alexparra.chatapp.fragments.ChatFragment"
-        android:label="fragment_chat"
+        android:label="Chat"
         tools:layout="@layout/fragment_chat" >
         <argument
             android:name="connection"
