--- a/app/src/main/res/layout/fragment_client_connect.xml
+++ b/app/src/main/res/layout/fragment_client_connect.xml
@@ -17,28 +17,44 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:hint="@string/username_hint"
-        android:inputType="text" />
+        android:hint="@string/username_hint">
 
-    <EditText
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userNameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ipAddress"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:hint="@string/ip_hint"
-        android:inputType="text" />
+        android:hint="@string/ip_hint">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ipAddressField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/joinChat"
-        android:layout_marginVertical="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/connect"
-        android:background="@drawable/buttons_bg_selector"/>
+        android:layout_marginVertical="25dp"
+        android:background="@drawable/buttons_bg_selector"
+        android:text="@string/connect" />
 
 </LinearLayout>
