--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -17,6 +17,23 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/username"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:hint="@string/username_hint">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userNameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
