--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -33,7 +33,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,13 +49,29 @@
         android:textSize="20sp"
         tools:text="192.168.0.1" />
 
-    <Button
-        android:id="@+id/createServer"
+    <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="25dp"
-        android:text="@string/create_server"
-        android:background="@drawable/buttons_bg_selector"/>
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/createAndJoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_and_join"
+            android:layout_marginEnd="10dp"/>
+
+        <Button
+            android:elevation="1dp"
+            android:id="@+id/createServer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_server"
+            style="@style/Widget.MaterialComponents.Button.TextButton" />
+
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
