--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -45,31 +45,49 @@
         android:id="@+id/ipAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:text="192.168.0.1"
-        android:layout_marginBottom="20dp"/>
+        tools:text="192.168.0.1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/createAndJoin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:text="@string/create_and_join"
-            android:layout_marginEnd="10dp"/>
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/joinChat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@string/join_chat"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/createServer"
-            android:elevation="1dp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:elevation="1dp"
             android:text="@string/create_server"
-            style="@style/Widget.MaterialComponents.Button.TextButton" />
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/stopServer"
+            android:backgroundTint="@color/red"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stop_server"
+            android:visibility="gone" />
 
     </LinearLayout>
 
@@ -78,6 +96,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </LinearLayout>
