--- a/app/src/main/res/layout/fragment_tictactoe.xml
+++ b/app/src/main/res/layout/fragment_tictactoe.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="10dp"
 
-    tools:context=".tictactoe.fragments.TictactoeFragment"
+    tools:context=".tictactoe.fragments.TicTacToeFragment"
     android:background="@color/soft_yellow"
 
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
