--- a/app/src/main/res/layout/chat_row_join.xml
+++ b/app/src/main/res/layout/chat_row_join.xml
@@ -12,7 +12,7 @@
         android:id="@+id/messageBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center"
         android:paddingHorizontal="15dp"
         android:background="@drawable/chat_bg_event">
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="3dp"
-            android:textStyle="bold"
+            android:textStyle="bold |italic"
             tools:text="username" />
 
         <TextView
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="3dp"
             android:paddingBottom="2dp"
+            android:textStyle="italic"
             tools:text="chat row message" />
 
         <TextView
@@ -39,8 +40,7 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="3dp"
             android:textStyle="italic"
-            tools:ignore="SmallSp"
-            tools:text="da/ta/data"
-            tools:textSize="10sp" />
+            tools:text="da/ta/data" />
+        tools:text="da/ta/data"/>
     </LinearLayout>
 </LinearLayout>
