--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -83,30 +83,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.65" />
+            app:layout_constraintGuide_percent="0.70" />
 
         <ImageView
             android:id="@+id/sendImageButton"
-            android:visibility="visible"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:padding="5dp"
             android:src="@drawable/ic_photo"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/guideline4"
             app:layout_constraintLeft_toRightOf="@id/guideline3"
+            app:layout_constraintRight_toLeftOf="@id/guideline4"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/sendPhotoButton"
-            android:visibility="visible"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:padding="5dp"
             android:src="@drawable/ic_take_picture"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/guideline2"
             app:layout_constraintLeft_toRightOf="@id/guideline4"
+            app:layout_constraintRight_toLeftOf="@id/guideline2"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -122,6 +123,7 @@
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
+            android:padding="5dp"
             android:src="@drawable/ic_send"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.75" />
+            app:layout_constraintGuide_percent="0.80" />
 
         <ImageView
             android:id="@+id/recordAudio"
@@ -142,8 +144,8 @@
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:visibility="gone"
             android:src="@drawable/ic_mic"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guideline2"
