--- a/app/src/main/res/layout/chat_members_row.xml
+++ b/app/src/main/res/layout/chat_members_row.xml
@@ -43,6 +43,7 @@
 
     <ImageView
         android:id="@+id/trophy"
+        android:visibility="invisible"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginHorizontal="5dp"
